renamed backup set to archive and replaced all occurrences of the old name

--- a/MediaBackupManager/Styles/ResourceDictionary.xaml
+++ b/MediaBackupManager/Styles/ResourceDictionary.xaml
@@ -19,7 +19,7 @@
         <Setter Property="VerticalAlignment" Value="Bottom" />
     </Style>
 
-    <Style TargetType="Label" x:Key="BackupSetTitle">
+    <Style TargetType="Label" x:Key="ArchiveTitle">
         <Setter Property="FontFamily" Value="./Font/#Roboto"/>
         <Setter Property="FontSize" Value="20" />
         <Setter Property="VerticalAlignment" Value="Bottom" />
