--- a/MediaBackupManager/Styles/ListBox.xaml
+++ b/MediaBackupManager/Styles/ListBox.xaml
@@ -3,8 +3,8 @@
                     xmlns:local="clr-namespace:MediaBackupManager.Styles"
                     xmlns:vsm="clr-namespace:System.Windows;assembly=System.Windows" xmlns:View="clr-namespace:MediaBackupManager.View">
 
-<!--Visual Style for the Backup Set List on the start page-->
-    <Style TargetType="ListBoxItem" x:Key="BackupSetListStyle" >
+<!--Visual Style for the Archive List on the start page-->
+    <Style TargetType="ListBoxItem" x:Key="ArchiveListStyle" >
         <Setter Property="FontFamily" Value="./Font/#Roboto"/>
         <Setter Property="Margin" Value="0,10"/>
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
