--- a/MediaBackupManager/View/CreateArchiveSetView.xaml
+++ b/MediaBackupManager/View/CreateArchiveSetView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MediaBackupManager.View.UpdateBackupSetView"
+﻿<UserControl x:Class="MediaBackupManager.View.CreateArchiveView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -31,6 +31,7 @@
         <Grid Margin="30">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" MaxHeight="300"/>
                 <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
@@ -43,9 +44,55 @@
                    Content="{Binding Title}" 
                    Style="{StaticResource Title}"/>
             <Separator Grid.Row="0" Grid.Column="0" VerticalAlignment="Bottom" Background="#FF303030" />
+            
+            <!--Label, Path and path picker-->
+            <Grid Grid.Row="1" Grid.Column="0" Margin="0,20"
+                IsEnabled="{Binding Path=IsScanInProgressOrCompleted, Converter={StaticResource InvertBool}}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="80"/>
+                    <ColumnDefinition Width="*" MinWidth="200" MaxWidth="400" />
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Label Grid.Row="0" Grid.Column="0" Content="Label" />
+                <TextBox x:Name="ArchiveLabel" Grid.Row="0" Grid.Column="1" >
+                    <TextBox.Text>
+                        <Binding Path="ArchiveLabel" UpdateSourceTrigger="PropertyChanged">
+                            <Binding.ValidationRules>
+                                <local:StringNotEmptyRule />
+                            </Binding.ValidationRules>
+                        </Binding>
+                    </TextBox.Text>
+                </TextBox>
+                <Label Content="Directory" Grid.Row="1" Grid.Column="0"  />
+                <TextBox x:Name="ArchivePath" Grid.Row="1" Grid.Column="1" >
+                    <TextBox.Text>
+                        <Binding Path="SelectedDirectory" UpdateSourceTrigger="PropertyChanged">
+                            <Binding.ValidationRules>
+                                <local:StringNotEmptyRule />
+                            </Binding.ValidationRules>
+                        </Binding>
+                    </TextBox.Text>
+                </TextBox>
+
+                <Button x:Name="btnSelectDirectory" Grid.Row="1" Grid.Column="2"
+                        Style="{StaticResource IconButtonBlue}"
+                        Width="31" Height="26" Margin="0,5"
+                        Command="{Binding SelectDirectoryCommand}" 
+                        VerticalAlignment="Bottom"
+                        VerticalContentAlignment="Bottom">
+                    <!--Set the fill to whatever color the parent button currently has-->
+                    <Path Width="29" Height="17" Style="{StaticResource appbar_folder_open}"
+                                              Fill="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Button}}, Path=Foreground}"></Path>
+                </Button>
+                
+            </Grid>
 
             <!--Progress bar and text-->
-            <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" Margin="0,15"
+            <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Vertical"  Margin="0,15"
                     Visibility="{Binding Path=IsScanInProgressOrCompleted, Converter={StaticResource BoolToVisibility}}" >
                 <StackPanel Width="500" Orientation="Vertical">
                     <Label Content="{Binding ScanStatusText}" />
@@ -53,7 +100,7 @@
                          Minimum="0" Maximum="100"
                          Value="{Binding ScanProgress}"/>
                 </StackPanel>
-                <TextBox x:Name="ProgressLog" IsReadOnly="False" Width="500" MaxHeight="200"
+                <TextBox x:Name="ProgressLog" IsReadOnly="True" Width="500" MaxHeight="200"
                          Text="{Binding FileScanErrorString}" 
                          Visibility="{Binding Path=HasScanErrors, Converter={StaticResource BoolToVisibility}}"
                          Height="Auto" VerticalScrollBarVisibility="Auto"
@@ -61,13 +108,13 @@
             </StackPanel>
 
             <!--Start and Cancel buttons-->
-            <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal"
+            <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal"
                         HorizontalAlignment="Right" VerticalAlignment="Bottom">
-                <Button x:Name="btnConfirm" Content="Restart" Style="{StaticResource ColorButtonBlue}"
+                <Button x:Name="btnConfirm" Content="Start" Style="{StaticResource ColorButtonBlue}"
                         Command="{Binding StartCommand}"
                         Visibility="{Binding IsScanInProgressOrCompleted, Converter={StaticResource InvertBoolToVisibility}}">
                 </Button>
-
+                
                 <!--Replace the gray cancel button with a nice blue one if the scan is done-->
                 <Button x:Name="btnCancel" Style="{StaticResource ColorButtonGray}"
                         Content="{Binding CancelButtonCaption}" 
