--- a/MediaBackupManager/View/MainWindow.xaml
+++ b/MediaBackupManager/View/MainWindow.xaml
@@ -14,20 +14,20 @@
             <local:DirectoryBrowserView />
         </DataTemplate>
 
-        <DataTemplate DataType="{x:Type viewmodel:CreateBackupSetViewModel}">
-            <local:CreateBackupSetView />
+        <DataTemplate DataType="{x:Type viewmodel:CreateArchiveViewModel}">
+            <local:CreateArchiveView />
         </DataTemplate>
 
-        <DataTemplate DataType="{x:Type viewmodel:UpdateBackupSetViewModel}">
-            <local:UpdateBackupSetView />
+        <DataTemplate DataType="{x:Type viewmodel:UpdateArchiveViewModel}">
+            <local:UpdateArchiveView />
         </DataTemplate>
 
         <DataTemplate DataType="{x:Type viewmodel:ExclusionListViewModel}">
             <local:ExclusionListView />
         </DataTemplate>
 
-        <DataTemplate DataType="{x:Type viewmodel:BackupSetOverviewViewModel}">
-            <local:BackupSetOverview />
+        <DataTemplate DataType="{x:Type viewmodel:ArchiveOverviewViewModel}">
+            <local:ArchiveOverview />
         </DataTemplate>
     </Window.Resources>
     
