--- a/MediaBackupManager/View/MainWindow.xaml
+++ b/MediaBackupManager/View/MainWindow.xaml
@@ -29,6 +29,9 @@
         <DataTemplate DataType="{x:Type viewmodel:ArchiveOverviewViewModel}">
             <local:ArchiveOverview />
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodel:CreateReportViewModel}">
+            <local:CreateReportView />
+        </DataTemplate>
     </Window.Resources>
     
     <Grid x:Name="LayoutRoot">
