--- a/MediaBackupManager/App.xaml
+++ b/MediaBackupManager/App.xaml
@@ -13,6 +13,7 @@
                 <ResourceDictionary Source="Styles/ListView.xaml" />
                 <ResourceDictionary Source="Styles/TreeView.xaml" />
                 <ResourceDictionary Source="Styles/ListBox.xaml" />
+                <ResourceDictionary Source="Styles/ComboBox.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
