added function to directly export archives

--- a/MediaBackupManager/View/ArchiveOverview.xaml
+++ b/MediaBackupManager/View/ArchiveOverview.xaml
@@ -130,7 +130,7 @@
 
                             <!--Buttons-->
                             <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
-
+                                <!--Update Button-->
                                 <Button DockPanel.Dock="Right" Style="{StaticResource IconButtonBlue}"
                                         Width="33" Height="38" Margin="3,0"
                                         Command="{Binding DataContext.ShowUpdateArchiveOverlayCommand, ElementName=LayoutRoot}"
@@ -139,7 +139,18 @@
                                     <Path Width="20" Height="23" Style="{StaticResource appbar_refresh}"
                                           Fill="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Button}}, Path=Foreground}"/>
                                 </Button>
-                                
+
+                                <!--Export Button-->
+                                <Button DockPanel.Dock="Right" Style="{StaticResource IconButtonBlue}"
+                                        Width="33" Height="38" Margin="3,0"
+                                        Command="{Binding DataContext.CreateReportOverlayCommand, ElementName=LayoutRoot}"
+                                        CommandParameter="{Binding}" >
+                                    <!--Set the fill to whatever color the parent button currently has-->
+                                    <Path Width="20" Height="23" Style="{StaticResource appbar_refresh}"
+                                          Fill="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Button}}, Path=Foreground}"/>
+                                </Button>
+
+                                <!--Delete Button-->
                                 <Button DockPanel.Dock="Right" Style="{StaticResource IconButtonRed}" 
                                         Width="32" Height="38"  Margin="3,0"
                                         Command="{Binding DataContext.RemoveArchiveCommand, ElementName=LayoutRoot}"
@@ -148,17 +159,6 @@
                                     <Path Width="18" Height="23"  Style="{StaticResource appbar_delete}"
                                           Fill="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Button}}, Path=Foreground}"/>
                                 </Button>
-
-                                <!--<Button x:Name="btnCancel" Style="{StaticResource ColorButtonGray}"
-                                    Content="Update" 
-                                    Command="{Binding CancelCommand}" 
-                                    Visibility="{Binding IsScanCompleted, Converter={StaticResource InvertBoolToVisibility}}" Background="LightGray"/>-->
-                                
-                                <!--<Button x:Name="btnDelete" Style="{StaticResource ColorButtonGray}"
-                                    Content="Delete" 
-                                    Command="{Binding CancelCommand}" 
-                                    Visibility="{Binding IsScanCompleted, Converter={StaticResource InvertBoolToVisibility}}"/>-->
-
                             </StackPanel>
                         </Grid>
                     </DataTemplate>
