--- a/MediaBackupManager/View/ArchiveOverview.xaml
+++ b/MediaBackupManager/View/ArchiveOverview.xaml
@@ -154,7 +154,7 @@
                                 <Button DockPanel.Dock="Right" Style="{StaticResource IconButtonRed}" 
                                         Width="32" Height="38"  Margin="3,0"
                                         Command="{Binding DataContext.RemoveArchiveCommand, ElementName=LayoutRoot}"
-                                        CommandParameter="{Binding}" ToolTip="Delete Arvhive" >
+                                        CommandParameter="{Binding}" ToolTip="Delete Archive" >
                                     <!--Set the fill to whatever color the parent button currently has-->
                                     <Path Width="18" Height="23"  Style="{StaticResource appbar_delete}"
                                           Fill="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Button}}, Path=Foreground}"/>
