--- a/MediaBackupManager/View/ArchiveOverview.xaml
+++ b/MediaBackupManager/View/ArchiveOverview.xaml
@@ -124,7 +124,18 @@
                                 <StackPanel Orientation="Horizontal">
                                     <Label Content="{Binding DriveType}" ContentStringFormat="{}{0} Volume" />
                                     <Label Content="{Binding MountPoint}" ContentStringFormat="(connected on Drive {0})" 
-                                        Visibility="{Binding IsConnected, Converter={StaticResource BoolToVisibility}}"/>
+                                        Visibility="{Binding IsConnected, Converter={StaticResource BoolToVisibility}}">
+                                        <!--<Label.Style>
+                                            <Style TargetType="Label">
+                                                <Setter Property="{Binding IsConnected}" Value="Visible" />
+                                                <Style.Triggers>
+                                                    <Trigger Property="{Binding IsConnected}" Value="False">
+                                                        <Setter Property="Visibility" Value="Hidden" />
+                                                    </Trigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </Label.Style>-->
+                                    </Label>
                                 </StackPanel>
                             </StackPanel>
 
